Editing tables using JQuery

--- a/WebContent/settlement.html
+++ b/WebContent/settlement.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
+
 </head>
 <body>
 	
@@ -26,6 +27,6 @@
 		<li>Shortages</li><br>
 		<li>Generate PDF</li>
 	</ul> -->
-
+<script src="js/scripts.js"></script>
 </body>
 </html>
