--- a/WebContent/table1.html
+++ b/WebContent/table1.html
@@ -10,44 +10,73 @@
 <body>
 <div class="container" style="margin-top:0px;">
 <h5>End of Day Trade List</h5>
-<table id="table_format" class="table table-bordered"><tbody><tr><th>Trade ID</th>
-<th class="tableHead">Security</th>
+<table id="table_format" class="table table-bordered"><tbody>
+<tr>
+<th class="tableHead">Trade ID</th>
+<th class="tableHead">Secusrity</th>
 <th class="tableHead">Quantity</th>
 <th class="tableHead">Price</th>
 <th class="tableHead">Buyer Clearing Member</th>
 <th class="tableHead">Seller Clearing Member</th>
-</tr><tr><td>1</td>
-<td>Apple</td>
-<td>22000</td>
-<td>101.20</td>
-<td>Goldman Sachs</td>
-<td>JP Morgan</td>
-<td class="text-center"><button type="button" class="btn">Delete</button></td>
+</tr><tr id="row1"><td id="tradeid_row1">1</td>
+<td id="security_row1">Apple</td>
+<td id="quantity_row1">22000</td>
+<td id="price_row1">101.20</td>
+<td id="buyer_row1">Goldman Sachs</td>
+<td id="seller_row1">JP Morgan</td>
+<td>
+<input type="button" id="edit_button1" value="Edit" class="edit" onclick="edit_row('1')">
+<input type="button" id="save_button1" value="Save" class="save" onclick="save_row('1')">
+<input type="button" value="Delete" class="delete" onclick="delete_row('1')">
+</td>
 </tr>
-<tr><td>2</td>
-<td>Apple</td>
-<td>30000</td>
-<td>102.0</td>
-<td>JP Morgan</td>
-<td>Deutsche Bank</td>
-<td class="text-center"><button type="button" class="btn">Delete</button></td>
+<tr id="row2"><td id="tradeid_row2">2</td>
+<td id="security_row2">Apple</td>
+<td id="quantity_row2">30000</td>
+<td id="price_row2">102.0</td>
+<td id="buyer_row2">JP Morgan</td>
+<td id="seller_row2">Deutsche Bank</td>
+<td>
+<input type="button" id="edit_button2" value="Edit" class="edit" onclick="edit_row('2')">
+<input type="button" id="save_button2" value="Save" class="save" onclick="save_row('2')">
+<input type="button" value="Delete" class="delete" onclick="delete_row('2')">
+</td>
 </tr>
-<tr><td>3</td>
-<td>Walmart</td>
-<td>120000</td>
-<td>4.00</td>
-<td>Goldman Sachs</td>
-<td>Deutsche Bank</td>
-<td class="text-center"><button type="button" class="btn">Delete</button></td>
+<tr id="row3"><td id="tradeid_row3">3</td>
+<td id="security_row3">Walmart</td>
+<td id="quantity_row3">120000</td>
+<td id="price_row3">4.00</td>
+<td id="buyer_row3">Goldman Sachs</td>
+<td id="seller_row3">Deutsche Bank</td>
+<td>
+<input type="button" id="edit_button3" value="Edit" class="edit" onclick="edit_row('3')">
+<input type="button" id="save_button3" value="Save" class="save" onclick="save_row('3')">
+<input type="button" value="Delete" class="delete" onclick="delete_row('3')">
+</td>
 </tr>
-<tr><td>4</td>
-<td>Linked IN</td>
-<td>7000</td>
-<td>47.00</td>
-<td>Deutsche Bank</td>
-<td>Citi</td>
-<td class="text-center"><button type="button" class="btn">Delete</button></td>
+<tr id="row4"><td id="tradeid_row4">4</td>
+<td id="security_row4">Linked IN</td>
+<td id="quantity_row4">7000</td>
+<td id="price_row4">47.00</td>
+<td id="buyer_row4">Deutsche Bank</td>
+<td id="seller_row4">Citi</td>
+<td>
+<input type="button" id="edit_button4" value="Edit" class="edit" onclick="edit_row('4')">
+<input type="button" id="save_button4" value="Save" class="save" onclick="save_row('4')">
+<input type="button" value="Delete" class="delete" onclick="delete_row('4')">
+</td>
 </tr>
+
+<tr>
+<td><input type="text" id="new_trade"></td>
+<td><input type="text" id="new_security"></td>
+<td><input type="text" id="new_quantity"></td>
+<td><input type="text" id="new_price"></td>
+<td><input type="text" id="new_buyer"></td>
+<td><input type="text" id="new_seller"></td>
+<td><input type="button" class="add" onclick="add_row();" value="Add Row"></td>
+</tr>
+
 </tbody></table>
 </div>
 
@@ -58,6 +87,7 @@
 
 
 <script src="tableShow.js"></script>
+<script src="table_script.js"></script>
 <script>
 jQuery('#table_format').ddTableFilter();
 </script>
