--- a/WebContent/table1.html
+++ b/WebContent/table1.html
@@ -5,15 +5,14 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Dropdown Filter/Search by product or items Using jQuery</title>
-<!-- <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> -->
 </head>
 <body>
 <div class="container" style="margin-top:0px;">
 <h5>End of Day Trade List</h5>
-<table id="table_format" class="table table-bordered"><tbody>
+<table id="table_format" class="table table-bordered" ><tbody>
 <tr>
 <th class="tableHead">Trade ID</th>
-<th class="tableHead">Secusrity</th>
+<th class="tableHead">Security</th>
 <th class="tableHead">Quantity</th>
 <th class="tableHead">Price</th>
 <th class="tableHead">Buyer Clearing Member</th>
@@ -24,7 +23,7 @@
 <td id="price_row1">101.20</td>
 <td id="buyer_row1">Goldman Sachs</td>
 <td id="seller_row1">JP Morgan</td>
-<td>
+<td class="buttons">
 <input type="button" id="edit_button1" value="Edit" class="edit" onclick="edit_row('1')">
 <input type="button" id="save_button1" value="Save" class="save" onclick="save_row('1')">
 <input type="button" value="Delete" class="delete" onclick="delete_row('1')">
@@ -36,7 +35,7 @@
 <td id="price_row2">102.0</td>
 <td id="buyer_row2">JP Morgan</td>
 <td id="seller_row2">Deutsche Bank</td>
-<td>
+<td class="buttons">
 <input type="button" id="edit_button2" value="Edit" class="edit" onclick="edit_row('2')">
 <input type="button" id="save_button2" value="Save" class="save" onclick="save_row('2')">
 <input type="button" value="Delete" class="delete" onclick="delete_row('2')">
@@ -48,7 +47,7 @@
 <td id="price_row3">4.00</td>
 <td id="buyer_row3">Goldman Sachs</td>
 <td id="seller_row3">Deutsche Bank</td>
-<td>
+<td class="buttons">
 <input type="button" id="edit_button3" value="Edit" class="edit" onclick="edit_row('3')">
 <input type="button" id="save_button3" value="Save" class="save" onclick="save_row('3')">
 <input type="button" value="Delete" class="delete" onclick="delete_row('3')">
@@ -60,21 +59,21 @@
 <td id="price_row4">47.00</td>
 <td id="buyer_row4">Deutsche Bank</td>
 <td id="seller_row4">Citi</td>
-<td>
-<input type="button" id="edit_button4" value="Edit" class="edit" onclick="edit_row('4')">
+<td class="buttons">
+<input type="button" id="edit_button4" value="Edit" class="edit" onclick="edit_row('4')"> 
 <input type="button" id="save_button4" value="Save" class="save" onclick="save_row('4')">
 <input type="button" value="Delete" class="delete" onclick="delete_row('4')">
 </td>
 </tr>
 
 <tr>
-<td><input type="text" id="new_trade"></td>
-<td><input type="text" id="new_security"></td>
-<td><input type="text" id="new_quantity"></td>
-<td><input type="text" id="new_price"></td>
-<td><input type="text" id="new_buyer"></td>
-<td><input type="text" id="new_seller"></td>
-<td><input type="button" class="add" onclick="add_row();" value="Add Row"></td>
+<td class="input"><input type="text" class="addNew" id="new_trade" size="4"></td>
+<td class="input"><input type="text" class="addNew" id="new_security" size="10"></td>
+<td class="input"><input type="text" class="addNew" id="new_quantity" size="10"></td>
+<td class="input"><input type="text" class="addNew" id="new_price" size="10"></td>
+<td class="input"><input type="text" class="addNew" id="new_buyer" size="10"></td>
+<td class="input"><input type="text" class="addNew" id="new_seller"></td>
+<td class="buttons"><input type="button" class="add" onclick="add_row();" value="Add Row"></td>
 </tr>
 
 </tbody></table>
